k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoshid
  namespace: hoshid
spec:
  selector:
    app: hoshid
  ports:
    - name: http
      port: 80
      targetPort: http
